upload swagger for user, album, userAlbum
