# src/modules/users/user.route.js
@@ -4,15 +4,15 @@ const helperMiddleware = require('../../helpers/helper.middleware');
 
 const route = express.Router();
 
-route.get('/user/show-info', helperMiddleware.checkAccessToken, userController.showInfo); // ok
+route.get('/user/show-info', helperMiddleware.checkAccessToken, userController.showInfo);
 
-route.post('/user/forgot-password', userController.forgotPassword); // ok
+route.patch('/user/forgot-password', userController.forgotPassword);
 
-route.post('/user/forgot-password/verify', userController.verifyForgotPassword); // ok
+route.patch('/user/forgot-password/verify', userController.verifyForgotPassword);
 
-route.post('/user/change-password', helperMiddleware.checkAccessToken, userController.changePassword); // ok
+route.patch('/user/change-password', helperMiddleware.checkAccessToken, userController.changePassword);
 
-route.post('/user/change-info', helperMiddleware.checkAccessToken, userController.changeInfo); // ok
+route.patch('/user/change-info', helperMiddleware.checkAccessToken, userController.changeInfo);
 
 module.exports = {
     userRoute: route,
